feat: global WASM edge filters management for Nginx proxy hosts
Adds a new WASM Modules menu item to the Settings navigation allowing
administrators to globally upload compiled `.wasm` files. These modules
are saved to the database and `/data/wasm/` respectively. They can
then be selected via a dropdown in the Proxy Host "Advanced" tab, which
injects the corresponding `wasm_module` block and user-supplied arguments
into the Nginx configuration.
