# backend/routes/main.js
@@ -17,6 +17,7 @@ import ddnsProvidersRoutes from "./nginx/ddns_providers.js";
 import deadHostsRoutes from "./nginx/dead_hosts.js";
 import proxyHostsRoutes from "./nginx/proxy_hosts.js";
 import redirectionHostsRoutes from "./nginx/redirection_hosts.js";
+import wasmModulesRoutes from "./nginx/wasm_modules.js";
 import streamsRoutes from "./nginx/streams.js";
 import torOnionRoutes from "./nginx/tor_onion.js";
 import wireguardRoutes from "./nginx/wireguard.js";
@@ -77,6 +78,7 @@ router.use("/nginx/analytics", nginxAnalyticsRoutes);
 router.use("/nginx/cloudflared-tunnels", cloudflaredRoutes);
 router.use("/nginx/tor-onion", torOnionRoutes);
 router.use("/nginx/wireguard", wireguardRoutes);
+router.use("/nginx/wasm-modules", wasmModulesRoutes);
 router.use("/gitops", gitopsRoutes);
 router.use("/services", servicesRoutes);
 
